benchmark-results/7/merge/cseq/concurrentwitness2test.2024-11-08_13-30-27.logfiles/SV-COMP23_unreach-call.cseq-safe020_power.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe020_power.yml/safe020_power.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe020_power.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_6w9ihl9b/tmp/tmpakgsg7sc.c
Compilation started
/tmp/BenchExec_run_6w9ihl9b/tmp/tmpakgsg7sc.c: In function ‘P0’:
/tmp/BenchExec_run_6w9ihl9b/tmp/tmpakgsg7sc.c:584:19: error: ‘FALSE’ undeclared (first use in this function)
  584 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_6w9ihl9b/tmp/tmpakgsg7sc.c:584:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_6w9ihl9b/tmp/tmpakgsg7sc.c: In function ‘P2’:
/tmp/BenchExec_run_6w9ihl9b/tmp/tmpakgsg7sc.c:641:19: error: ‘TRUE’ undeclared (first use in this function)
  641 |   weak$$choice0 = TRUE;;
      |                   ^~~~
/tmp/BenchExec_run_6w9ihl9b/tmp/tmpakgsg7sc.c:645:19: error: ‘FALSE’ undeclared (first use in this function)
  645 |   weak$$choice1 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_6w9ihl9b/tmp/tmpakgsg7sc.c: In function ‘main’:
/tmp/BenchExec_run_6w9ihl9b/tmp/tmpakgsg7sc.c:717:19: error: ‘TRUE’ undeclared (first use in this function)
  717 |   weak$$choice1 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
